1 more time update

--- a/root/styles/base.css
+++ b/root/styles/base.css
@@ -92,7 +92,7 @@ a:focus-visible {
   background: transparent;
 }
 
-.frame {
+.header {
   z-index: 100;
   pointer-events: none;
   position: fixed;
@@ -111,31 +111,27 @@ a:focus-visible {
   text-align: left;
 }
 
-.frame a {
+.header a {
   pointer-events: auto;
 }
 
-.frame__title {
+.header__title {
   margin: 0;
   font-size: 1rem;
   font-weight: 500;
   grid-area: title;
 }
 
-.frame__links {
+.header__links {
   grid-area: links;
 }
 
-.frame__links a:not(:last-child) {
+.header__links a:not(:last-child) {
   margin-right: 1rem;
 }
 
-.frame__credits {
-  grid-area: credits;
-}
-
 @media screen and (min-width: 53em) {
-  .frame {
+  .header {
     height: 100vh;
     align-items: space-between;
   }
